# MultiNest

./: README.md
CMake_version/multinest/CMakeModules/: FindMultiNest.cmake
CMake_version/multinest/include/: multinest.h
CMake_version/multinest/src/example_ackley/: params.f90
CMake_version/multinest/src/example_eggbox_C/: CMakeLists.txt  eggbox.c
CMake_version/multinest/src/example_eggbox_C++/: CMakeLists.txt
CMake_version/multinest/src/example_himmelblau/: params.f90
CMake_version/multinest/src/example_rosenbrock/: nestwrap.f90
CosmoMC_MultiNest/CosmoMC-Nov2015-MultiNest_v3.9/: distgeneric.ini  test.ini
CosmoMC_MultiNest/CosmoMC-Nov2015-MultiNest_v3.9/.svn/: all-wcprops  entries
CosmoMC_MultiNest/CosmoMC-Nov2015-MultiNest_v3.9/MultiNest/: README  cwrapper.f90  priors.f90  symmetricbetadistribution.f90
CosmoMC_MultiNest/CosmoMC-Nov2015-MultiNest_v3.9/MultiNest/.svn/: all-wcprops  entries
CosmoMC_MultiNest/CosmoMC-Nov2015-MultiNest_v3.9/MultiNest/.svn/text-base/: Makefile.svn-base  nested.F90.svn-base
CosmoMC_MultiNest/CosmoMC-Nov2015-MultiNest_v3.9/batch2/: multinest_ellipsoidal_priors.ini  multinest_gaussian_priors.ini
CosmoMC_MultiNest/CosmoMC-Nov2015-MultiNest_v3.9/batch2/.svn/: all-wcprops  entries
CosmoMC_MultiNest/CosmoMC-Nov2015-MultiNest_v3.9/batch2/.svn/text-base/: multinest.ini.svn-base  multinest_sorted_uniform_priors.ini.svn-base
CosmoMC_MultiNest/CosmoMC-Nov2015-MultiNest_v3.9/camb/: lensing.f90  reionization.f90
CosmoMC_MultiNest/CosmoMC-Nov2015-MultiNest_v3.9/camb/.svn/: all-wcprops  entries
CosmoMC_MultiNest/CosmoMC-Nov2015-MultiNest_v3.9/camb/.svn/text-base/: halofit_ppf.f90.svn-base
CosmoMC_MultiNest/CosmoMC-Nov2015-MultiNest_v3.9/source/: Calculator_CAMB.f90  Makefile
CosmoMC_MultiNest/CosmoMC-Nov2015-MultiNest_v3.9/source/.svn/: all-wcprops  entries
CosmoMC_MultiNest/CosmoMC-Nov2015-MultiNest_v3.9/source/.svn/text-base/: GeneralSetup.f90.svn-base  driver.F90.svn-base  nestwrap.f90.svn-base
MatlabMultiNest/: LICENSE  README
MatlabMultiNest/Examples/: data_line.txt  example_eggbox.m  example_line.m  example_line_with_outliers.m  example_line_with_outliers_and_marginalization.m  example_sinusoid.m  example_triangle.m
MatlabMultiNest/NSMain/: calc_ellipsoid.m  draw_from_ellipsoid.m  draw_mcmc.m  draw_multinest.m  in_ellipsoids.m  logplus.m  mchol.m  nest2pos.m  nested_sampler.m  optimal_ellipsoids.m  plot_2d_livepoints_with_ellipses.m  rescale_parameters.m  scale_parameters.m  split_ellipsoid.m
MatlabMultiNest/Unsorted/: draw_from_torus.m  eggbox_model.m  ellipsoid_2d.m  ellipsoid_3d.m  hist2.m  line_model.m  logL_gaussian.m  logL_mixture_gaussian.m  logL_model_likelihood.m  logt.m  posteriors.m  readdata_line.m  sinusoid_model.m  test_draw_from_ellipsoid.m  test_optimal_ellipsoids.m  triangle_model.m
MultiNest_v3.10/: Makefile  README  cwrapper.f90  nested.F90  posterior.F90
MultiNest_v3.10/example_ackley/: Makefile
MultiNest_v3.10/example_eggbox/: params.f90
MultiNest_v3.10/example_eggbox_C++/: eggbox.cc
MultiNest_v3.10/example_gauss_shell/: params.f90
MultiNest_v3.10/example_gaussian/: params.f90
MultiNest_v3.10/example_himmelblau/: main.f90
MultiNest_v3.10/example_obj_detect/: like.f90  params.f90
MultiNest_v3.10/example_rosenbrock/: Makefile
MultiNest_v3.10_CMake/multinest/: CMakeLists.txt  README
MultiNest_v3.10_CMake/multinest/src/example_ackley/: params.f90
MultiNest_v3.10_CMake/multinest/src/example_eggbox_C/: multinest.h
MultiNest_v3.10_CMake/multinest/src/example_gauss_shell/: main.f90
MultiNest_v3.10_CMake/multinest/src/example_gaussian/: like.f90
MultiNest_v3.10_CMake/multinest/src/example_himmelblau/: CMakeLists.txt  params.f90
MultiNest_v3.10_CMake/multinest/src/example_rosenbrock/: params.f90
MultiNest_v3.11/: Makefile  README  cwrapper.f90  nested.F90  posterior.F90  utils.f90
MultiNest_v3.11/example_ackley/: main.f90
MultiNest_v3.11/example_eggbox/: params.f90
MultiNest_v3.11/example_eggbox_C/: multinest.h
MultiNest_v3.11/example_gauss_shell/: Makefile
MultiNest_v3.11/example_gaussian/: params.f90
MultiNest_v3.11/example_obj_detect/: params.f90
MultiNest_v3.11/example_rosenbrock/: like.f90
MultiNest_v3.11_CMake/multinest/: CMakeLists.txt  README
MultiNest_v3.11_CMake/multinest/src/example_gauss_shell/: CMakeLists.txt  params.f90
MultiNest_v3.12/: Makefile
MultiNest_v3.12/example_eggbox_C++/: Makefile
MultiNest_v3.12/example_gaussian/: Makefile
MultiNest_v3.12/example_gaussian_weinberg/: like.f90  params.f90
MultiNest_v3.12/example_himmelblau/: Makefile
MultiNest_v3.12/example_loggamma/: Makefile
MultiNest_v3.12_CMake/multinest/: README
MultiNest_v3.12_CMake/multinest/src/: CMakeLists.txt  cwrapper.f90  posterior.F90  xmeans_clstr.f90
MultiNest_v3.12_CMake/multinest/src/example_ackley/: CMakeLists.txt  like.f90
MultiNest_v3.12_CMake/multinest/src/example_eggbox_C/: eggbox.c
MultiNest_v3.12_CMake/multinest/src/example_eggbox_C++/: eggbox.cc
MultiNest_v3.12_CMake/multinest/src/example_gauss_shell/: like.f90
MultiNest_v3.12_CMake/multinest/src/example_gaussian/: CMakeLists.txt  main.f90
MultiNest_v3.12_CMake/multinest/src/example_himmelblau/: like.f90
MultiNest_v3.12_CMake/multinest/src/example_obj_detect/: CMakeLists.txt  main.f90
MultiNest_v3.12_CMake/multinest/src/example_rosenbrock/: CMakeLists.txt  params.f90
non_CMake_version/: README  nested.F90  priors.f90
non_CMake_version/example_eggbox/: Makefile  like.f90  main.f90
non_CMake_version/example_eggbox_C/: Makefile
non_CMake_version/example_gaussian_weinberg/: Makefile  main.f90
non_CMake_version/example_loggamma/: like.f90  main.f90  params.f90
non_CMake_version/example_obj_detect/: Makefile  like.f90
